--- a/style.css
+++ b/style.css
@@ -73,3 +73,111 @@ html, body{
     font-size: 1vw;
     text-align: right;
 }
+
+#hfooter{
+    padding: 0 2vw;
+    width: 100%;
+    position: absolute;
+    bottom: 3%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#hfooter a{
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+#hfooter #iconset{
+    display: flex;
+    gap: 5px;
+}
+
+#hfooter .circle{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: #fff;
+}
+
+#second{
+    color: #fff;
+    padding-right: 10vw;
+    padding-top: 120px;
+    background-color: #000;
+    width: 100%;
+    height: 100vh;
+}
+
+.elem{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding: 3.5vw 3vw;
+    padding-right: 0;
+    border-top: 1px solid #888;
+}
+
+.elem h1{
+    text-transform: uppercase;
+    font-size: 5vw;
+    opacity: .6;
+}
+
+.elemlast{
+    border-bottom: 1px solid #888;
+}
+
+.elem img{
+    display: none;
+    /* opacity: 0; */
+    height: 130%;
+    z-index: 999;
+    position: absolute;
+}
+
+#about{
+    display: flex;
+    align-items: center; 
+    gap: 50px;
+    color: #fff;
+    padding: 10vw 10vw;
+    padding-left: 40vw;
+    width: 100%;
+    background-color: #000;
+}
+
+#textabout{
+    width: 25rem;
+}
+
+#textabout h5{
+    text-transform: uppercase;
+    opacity: .6;
+    margin-bottom: 10px;
+}
+
+#textabout p{
+    line-height: 1.7;
+    margin-bottom: 30px;
+}
+
+#about img{
+    width: 200px;
+}
+
+#textabout a{
+    padding: 12px 22px;
+    border: 1px solid #fff;
+    border-radius: 100px;
+    color: #fff;
+    font-size: 12px;
+    text-decoration: 12px;
+}
