--- a/style.css
+++ b/style.css
@@ -10,11 +10,23 @@ html, body{
     height: 100%;
 }
 
+#minicircle{
+    transition: all cubic-bezier(0.19, 1, 0.22, 1) 1s;
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    z-index: 99999;
+    border-radius: 50%;
+    background-color: #fff;
+}
+
 #main{
     width: 100%;
+    background-color: #000;
 }
 
 #hero{
+    position: relative;
     color: #fff;
     width: 100%;
     height: 100vh;
@@ -198,4 +210,33 @@ html, body{
     text-transform: uppercase;
     font-size: 14px;
     margin-top: 10px;
+}
+
+#footer{
+    color: #fff;
+    background-color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 40px 30px;
+}
+
+#footerleft{
+    display: flex;
+    gap: 20;
+}
+
+
+#footerright{
+    display: flex;
+    gap: 20px;
+}
+
+
+#footer a{
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 500;
+    color: #fff;
+    text-decoration: none;
 }
