--- a/style.css
+++ b/style.css
@@ -164,11 +164,12 @@ html, body{
 }
 
 .elem img{
-    display: none;
-    /* opacity: 0; */
+    pointer-events: none;
+    opacity: 0;
     height: 130%;
     z-index: 999;
     position: absolute;
+    transform: translate(-50%, -50%);
 }
 
 #about{
@@ -242,12 +243,10 @@ html, body{
     gap: 20;
 }
 
-
 #footerright{
     display: flex;
     gap: 20px;
 }
-
 
 #footer a{
     text-transform: uppercase;
